plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.9'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'jacoco'
}

group = 'com.codeit'
version = '0.0.1-SNAPSHOT'
description = 'monew'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

jacocoTestReport {
    dependsOn test

    classDirectories.setFrom(
        files(classDirectories.files.collect {
            fileTree(dir: it, excludes: [
                '**/Q*.class',
                '**/*Application.class',
                '**/*Config.class',
                '**/*Dto.class',
                '**/*Request.class',
                '**/*Response.class',
                '**/*Exception.class',
                '**/generated/**'
            ])
        })
    )

    reports {
        html.required = true
        xml.required = true
        csv.required = true
    }
}
// 나중에 추가 예정 (테스트 커버리지 70% 이상으로 제한)
/*
jacocoTestCoverageVerification {
    violationRules {
        rule {
            limit {
                minimum = 0.7
            }
        }
    }
}
*/

check.dependsOn jacocoTestCoverageVerification

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'com.h2database:h2'
    runtimeOnly 'org.postgresql:postgresql'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // QueryDSL JPA 의존성
    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'

    // Annotation Processor
    annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"

    //문자열 처리 전용 유틸
    implementation "org.apache.commons:commons-text:1.11.0"

    // rss 수집 라이브러리
    implementation 'com.rometools:rome:2.1.0'
    // jsoup 라이브러리
    implementation 'org.jsoup:jsoup:1.17.2'
    // instancio
    testImplementation 'org.instancio:instancio-junit:5.5.1'

    //스웨거
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.4'

    // S3
    implementation 'software.amazon.awssdk:s3:2.31.7'
}

tasks.named('test') {
    useJUnitPlatform()
}
